changed my to our

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<title> This is my first website</title>
+<title> This is our first website</title>
 <h1>Welcome To My World</h1>
-<p>Hallo,I hope you enjoy my website</P>
+<p>Hi,I hope you enjoy my website</P>
 <p>:) D: X) </p>
 </html>
