--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <title> This is our first website</title>
 <h1>Welcome To My World</h1>
+<p>Hello my name is vansh and uday is jhatu</p>
 <p>Hi,I hope you enjoy my website</P>
 <p>:) D: X) </p>
 <p>welcome again</p>
